@@ -37,10 +37,7 @@ java {
 
 test {
     useJUnitPlatform()
-    jvmArgs += [
-        '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
-        '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED'
-    ]
+    jvmArgs += ['--enable-native-access=ALL-UNNAMED']
     testLogging {
         events "passed", "skipped", "failed"
         showStandardStreams = true
